[package]
name = "sayegh_bit_parser"
version = "0.1.3"
edition = "2021"
description = "A library that parses odd/even bits in serial mode in byte buffers and parses them out after grouping them in byte buffer group. Also, there are file reading and writing functions using the `Vec::<u32>` type in this library."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
